@@ -1,5 +1,10 @@
 2007-07-29  Vitaly Alexeev <tishka92@yahoo.com>
 	
+	a bit cleanup
+	* gameswf/gameswf_object.cpp
+
+2007-07-29  Vitaly Alexeev <tishka92@yahoo.com>
+	
 	getter/setter requires the target
 	* gameswf/gameswf_object.cpp
 	* gameswf/gameswf_value.cpp
